--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.celllife</groupId>
-	<artifactId>celllife-odkcollect</artifactId>
+	<artifactId>celllife-hpvi-app</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>apk</packaging>
 
